<resources>
    <!--SectinelXApplication-App-->
    <string name="app_name">SentinelX</string>
    <string name="login_activity_title">Login</string>
    <string name="drop_down_option_menu">Option Menu</string>
    <string name="user_status_desc">User Status</string>
    <string name="location_2_placeholder">Location: %1$s, %2$s</string>
    <string name="address_1_placeholder">Address: %1$s</string>

    <!--Google map api key-->
    <string name="google_map_api_key" templateMergeStrategy="preserve"
            translatable="false">AIzaSyCepyk40OqSiJwQqqJxddnrCNLUwVwd0p0</string>

    <string name="google_map_direction_api_key" templateMergeStrategy="preserve"
        translatable="false">AIzaSyA-ItOXImN9QIUYA2_cQnkiNDtDWyp4Tlc</string>

    <!--Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Menu-->
    <string name="action_settings">Settings</string>
    <string name="action_user_profile">User Profile</string>
    <string name="action_logout">Sign Out</string>

    <!--user list item menu-->
    <string name="follow">Follow</string>
    <string name="un_follow">Un Follow</string>

    <!--Login, SignUp-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="create_new_account"><u>Create new Account</u></string>
    <string name="login">Login</string>
    <string name="sign_up">SignUp</string>
    <string name="username">Username</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_password_not_match">Password dos\'t match</string>
    <string name="error_field_required">This field is required</string>

    <!--item users list recycler view-->
    <string name="user_profile_logo_description">Profile Image</string>

    <!--Preferences-->
    <string name="preferences_activity_title">Preferences</string>
    <!--headers-->
    <string name="header_about_sentinelx">About SentinelX</string>
    <string name="header_about">About</string>

    <!--titles-->
    <string name="title_version">Version</string>
    <string name="title_contact">Contact</string>

    <!--summery-->
    <string name="summery_version">1.0</string>
    <string name="mail_address_contact">mailto:arbazmateen@gmail.com</string>
    <string name="summary_contact">Send email to developer</string>
    <string name="summary_about">Hi there! I am programming enthusiast. My skills includes Android (Java , Kotlin),
            Java Desktop development (Enterprise Application), JS, PHP, Python, Unity game development (C#) and lot more.</string>
    <string name="summary_about_sentinelx">SentinelX is application to locate any online or offline user on real time
            also check its location history. Application has central admin system who can monitor app the users. No user can track
            the admin.</string>

    <!--keys-->
    <string name="map_type_key">mapType</string>
    <string name="map_mode_key">mapMode</string>
    <string name="rotate_map_key">rotateMap</string>
    <string name="alternatives_path_key">alternativesPath</string>
    <string name="focus_on_marker_key">focusOnMarker</string>
    <string name="update_time_key">fastInterval</string>

    <!--entries-->
    <string-array name="update_time">
        <item>1 sec</item>
        <item>2 sec</item>
        <item>3 sec</item>
        <item>5 sec</item>
        <item>10 sec</item>
        <item>15 sec (Recommended)</item>
        <item>20 sec</item>
        <item>25 sec</item>
        <item>30 sec</item>
    </string-array>

    <string-array name="update_time_value">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>

    <string-array name="map_type">
        <item>NORMAL</item>
        <item>SATELLITE</item>
        <item>TERRAIN</item>
        <item>HYBRID</item>
    </string-array>

    <string-array name="map_type_value">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="map_mode">
        <item>DRIVING</item>
        <item>WALKING</item>
    </string-array>

    <string-array name="map_mode_value">
        <item>1</item>
        <item>2</item>
    </string-array>


    <!--User Profile Activity-->
    <string name="user_profile_image">User Profile Image</string>
    <string name="email_verified_status">Email Verified Status</string>
    <string name="unknown">Unknown</string>
    <string name="password_change_request">Password change request</string>
    <string name="reset_link_will_be_send_to_your_email_address">Reset link will be send to your email address</string>
    <string name="current_location">Current Location</string>


</resources>
