<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="99"
        android:title="@string/action_logout"
        android:icon="@drawable/exit"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_user_profile"
        android:orderInCategory="100"
        android:title="@string/action_user_profile"
        android:icon="@drawable/person"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        android:icon="@drawable/settings"
        app:showAsAction="never" />
</menu>
