<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:padding="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.UserProfileActivity"
    tools:showIn="@layout/activity_user_profile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#212121" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_username"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#727272" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_email"
            android:paddingTop="16dp"
            android:text="@string/email_verified_status"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#212121" />

        <TextView
            android:id="@+id/tv_verified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_status"
            android:layout_marginTop="8dp"
            android:text="@string/unknown"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#727272" />


        <RelativeLayout
            android:id="@+id/password_reset_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_verified"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/tvNumber1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_change_request"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvNumber1"
                android:layout_marginTop="8dp"
                android:text="@string/reset_link_will_be_send_to_your_email_address"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#727272" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_reset_link"
            android:text="@string/current_location"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#212121" />

        <TextView
            android:id="@+id/tv_coordinates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_location"
            android:layout_marginTop="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#727272" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_coordinates"
            android:layout_marginTop="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#727272" />

    </RelativeLayout>


</android.support.v4.widget.NestedScrollView>