<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greenish"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.thkf.sentinelx.fragments.SignUpFragment">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_name"
        android:fontFamily="@font/playball"
        android:textColor="@color/white_grayish"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:textColor="@color/white_grayish"
        android:textSize="25sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorTextAppearance="@style/MyAppTheme.TextInputLayout"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/username"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/username"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp" />

    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/grayish" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorTextAppearance="@style/MyAppTheme.TextInputLayout"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp" />

    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/grayish" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:passwordToggleContentDescription="@string/password"
        app:errorTextAppearance="@style/MyAppTheme.TextInputLayout"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/lock"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/grayish" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:passwordToggleContentDescription="@string/password"
        app:errorTextAppearance="@style/MyAppTheme.TextInputLayout"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/lock"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/grayish" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_selector"
        android:padding="3dp"
        android:text="@string/sign_up"
        android:textColor="#009688"
        android:textSize="17sp"
        android:textStyle="bold" />

</LinearLayout>
